--- a/css/style.css
+++ b/css/style.css
@@ -159,14 +159,13 @@ body {
     width: 200%;
     border: 2px solid red;
     display: flex;
-    align-items: center;
+    align-items: flex-start;
 }
 
 .cardsHome, .cardsHomeNext {
-    width: 100%;
-    border: 2px solid #fff;
+    width: 100%;    
     display: flex;
-    align-items: center;
+    align-items: flex-start;
     justify-content: space-between;
     transform: translateX(-100%);
     transition: 0.3s ease;
@@ -280,3 +279,11 @@ body {
     background-color: rgb(90, 90, 16);
 }
 
+.nextCard {
+    width: 267px !important;
+}
+
+.nextCard .imgStyle {
+    width: 100%;
+    height: 159px;
+}
