--- a/css/style.css
+++ b/css/style.css
@@ -176,14 +176,6 @@ body {
     transition: 0.3s ease;
 }
 
-/* .cardsHome {
-    transform: translateX(-100%);
-}
-
-.cardsHomeNext {
-    transform: translateX(-100%);
-} */
-
 .imgStyle {
     position: relative;
     width: 172px;
@@ -356,4 +348,34 @@ body {
 
 #MT:checked ~ .filmContainer > .cardsBox > .control > .labelsOf > .next {
     background-color: rgb(90, 90, 16);
+}
+
+footer {
+    margin-top: 70px;
+    height: 100px;
+    box-shadow: 0  0 20px #000;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.littel_footer_store {
+    display: flex;
+    align-items: center;
+}
+
+.dowwnload {
+    display: flex;
+    align-items: center;
+    margin-right: 16px;
+    padding: 8px;
+    background-color: #000;
+    text-decoration: none;
+}
+
+.dowwnload p {  
+    margin-left: 5px;
+    font-size: 12px;
+    display: flex;
+    flex-direction: column;
 }
